# blog-template-pte-sls

./: README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
src/handlers/: hello.py
